[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Interactables/CoffeeMachineTable_Empty.png" type="Texture" id=1]
[ext_resource path="res://Assets/Test_Interact.png" type="Texture" id=2]
[ext_resource path="res://Assets/Test_Interact_Cooldown.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Coffee_Machine.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/Interactables/CoffeeMachineTable_Ready.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Interactables/CoffeeMachineTable_Processing.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5, 32.5 )

[node name="Coffe_Machine" type="Area2D"]
script = ExtResource( 4 )

[node name="Sprite_Coffee_Machine_Empty" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite_Coffee_Machine_Processing" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="Sprite_Coffee_Machine_Ready" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Interact" type="Sprite" parent="."]
position = Vector2( -26, -31 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.5, 17.5 )
shape = SubResource( 1 )

[node name="Cooldown" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -57 )
texture = ExtResource( 3 )
